script/res/515030910592_黎金宁/compile-message/vector-advan
In file included from ./testspace/vector-advan.cc:1:
In file included from ./testspace/vector.hpp:1:
./testspace/../submit/515030910592_黎金宁/vector.hpp:212:13: error: no matching constructor for initialization of 'Integer'
                T*p = new T[maxsize*2];
                          ^
./testspace/../submit/515030910592_黎金宁/vector.hpp:437:4: note: in instantiation of member function 'sjtu::vector<Integer>::doublespace' requested here
                        doublespace();
                        ^
./testspace/vector-advan.cc:16:8: note: in instantiation of member function 'sjtu::vector<Integer>::push_back' requested here
                vInt.push_back(Integer(i));
                     ^
./testspace/class-integer.hpp:5:2: note: candidate constructor not viable: requires single argument 'value', but no arguments were provided
        Integer(const int &value) : data(value) {}
        ^
./testspace/class-integer.hpp:6:2: note: candidate constructor not viable: requires single argument 'other', but no arguments were provided
        Integer(const Integer &other) : data(other.data) {}
        ^
1 error generated.
